# fido-platform-takehome

./: .gitignore  README.md  doc.md
infra-k8s/: k3d-config.yaml  k3d-registries.yaml
infra-k8s/argocd_apps/: my-service-app.yaml  nginx-app.yaml
infra-k8s/k8s-apps/my-service/: configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
infra-k8s/k8s-apps/nginx/: deployment.yaml  ingress.yaml  service.yaml
my-service/: Dockerfile  README.md  pyproject.toml
my-service/my_service/: argocd_client.py  dependencies.py  main.py
my-service/my_service/api/v1/: api.py
my-service/my_service/api/v1/routers/: argocd_querier_router.py
my-service/my_service/clients/: argocd_client_session.py
my-service/my_service/config/: config.py
my-service/my_service/models/: models.py
my-service/my_service/utils/: logger.py  utils.py
